# glucose-syrup-4.1

./: CMakeLists.txt
glucose/core/: Solver.cc  SolverTypes.h
glucose/simp/: Main.cc  depend.mk
glucose/utils/: ParseUtils.h  System.h
msvc-2017/: .gitignore  cert.txt  glucose.sln  glucose.vcxproj  glucose.vcxproj.filters  moser_3_color.dimacs
msvc-2017/glucose-lib/: glucose-lib.vcxproj  glucose-lib.vcxproj.filters
msvc-2017/glucose-lib/fake_zlib/: zlib.cpp  zlib.h
